业务应用服务、服务人员账号服务，逻辑实现与单元测试